--- a/index.html
+++ b/index.html
@@ -26,22 +26,19 @@
       <div class="contactInfo light">
         <div class="contact__header header-text caps divider-light pb mt-lg">contact info</div>
         <ul>
-          <li>
-            <span class="icon"><i class="fas fa-phone fa-rotate-90"></i></span>
-            <span class="body-text old-style">+1 508 409 7175</span>
-          </li>
+          <!-- <li>
+            <span class="icon"><i class="fas fa-globe "></i></span>
+            <span class="body-text old-style">gabesabella.com</span>
+          </li> -->
           <li>
             <span class="icon"><i class="fas fa-envelope-open"></i></span>
-            <span class="body-text">gabe.sabella@gmail.com</span>
+            <span class="body-text body-text-small">gabe.sabella.dev@gmail.com</span>
           </li>
-          <!-- <li>
-            <span class="icon"><i class="fas fa-globe"></i></span>
-            <span class="body-text">gabesproshop.herokuapp.com</span>
-          </li> -->
-          <!-- <li>
-            <span class="icon"><i class="fab fa-linkedin-in"></i></span>
-            <a href="https://www.linkedin.com/in/gabriel-sabella-8a329698"><span class="body-text linkdin">LinkedIn (Gabriel Sabella)</span></a>
-          </li> -->
+          
+          <li>
+            <span class="icon"><i class="fas fa-phone fa-rotate-90"></i></span>
+            <span class="body-text linkdin">(508) 409 7175</span>
+          </li>
           <li>
             <span class="icon"><i class="fas fa-map-marker"></i></span>
             <span class="body-text">Boston, MA</span>
@@ -52,7 +49,7 @@
         <div class="education light">
           <div class="header-text caps divider-light pb">education</div>
           <div class="body-text light pt">Western Governors University</div>
-          <div class="body-text light pt-sm">Computer Science Major</div>
+          <div class="body-text light pt-sm">Bachelor's in Computer Science</div>
         </div>
 
    
@@ -61,37 +58,37 @@
 
 
         <div class="progress-container body-text light caps big-text">
-          <div class="progress-unit">html
+          <div class="progress-unit">html, jsx, tsx
             <div class="outer">
               <div class="inner" id="html"></div>
              </div>
           </div>
-          <div class="progress-unit">css
+          <div class="progress-unit">css, scss, tailwind
             <div class="outer">
               <div class="inner" id="css"></div>
              </div>
           </div>
-          <div class="progress-unit">scss
+          <div class="progress-unit">javascript, typescript
             <div class="outer">
               <div class="inner" id="scss"></div>
              </div>
           </div>
-          <div class="progress-unit">javascript
+          <div class="progress-unit">python, django, flask
             <div class="outer">
               <div class="inner" id="js"></div>
              </div>
           </div>
-          <div class="progress-unit">react
+          <div class="progress-unit">react, nextjs
             <div class="outer">
               <div class="inner" id="react"></div>
              </div>
           </div>
-          <div class="progress-unit">java
+          <div class="progress-unit">java, javafx
             <div class="outer">
               <div class="inner" id="java"></div>
              </div>
           </div>
-          <div class="progress-unit">sql
+          <div class="progress-unit">sql, railway, prisma
             <div class="outer">
               <div class="inner" id="sql"></div>
              </div>
@@ -118,12 +115,12 @@
       <div class="standard-padding">
         <div class="header-text caps">about me</div>
         <div class="standard-text mt-lg body-text">
-          I am a web developer and a soon to be computer science graduate who is passionate about designing and building user interfaces. People would say that I'm hard-working, goal-driven, and willing to learn anything to get the job done! I am also quick to learn and value teamwork and communication.        
+          I’m Gabe, a recent computer science graduate. I'm passionate about creating visually stunning and user-friendly websites for up and coming businesses to solve specific problems. My approach involves developing unique solutions to meet individual client needs.    
         </div>
         <div class="header-text caps pt-md">latest project</div>
         <!-- <span class="icon"><i class="fas fa-globe"></i></span> -->
-          <div class="body-text mt-lg standard-text">A fully functioning E-commerce website built using React. Connected to a NoSQL database using mongoDB. User authentication, admin functionality, and payment taken with paypal.</div>
-          <div class="body-text site"><a href="https://gabesproshop.herokuapp.com">gabesproshop.herokuapp.com</a>
+          <div class="body-text mt-lg standard-text">A simple social media application using Next Auth for authentication. Users can log in with their google account, share, and comment on each other's posts!</div>
+          <div class="text-lg body-text site"><a href="https://poster-5wxj.vercel.app/">Poster</a>
           </div>
       </div>
 
