Reduced word count

--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
       <div class="standard-padding">
         <div class="header-text caps">about me</div>
         <div class="standard-text mt-lg body-text">
-          I’m Gabe, a recent computer science graduate. I'm passionate about creating visually stunning and user-friendly websites for up and coming businesses to solve specific problems. My approach involves developing unique solutions to meet individual client needs.    
+          I’m Gabe, a recent computer science graduate and frontend developer. I building full stack applications with appealing user interfaces. 
         </div>
         <div class="header-text caps pt-md">latest project</div>
         <!-- <span class="icon"><i class="fas fa-globe"></i></span> -->
           <div class="body-text mt-lg standard-text">A simple social media application using Next Auth for authentication. Users can log in with their google account, share, and comment on each other's posts!</div>
-          <div class="text-lg body-text site"><a href="https://poster-5wxj.vercel.app/">Poster</a>
+          <div class="text-md body-text site"><a href="https://poster-5wxj.vercel.app/">Poster</a>
           </div>
       </div>
 
 
-      <div class="header-text caps py-30">related completed courses</div>
+      <div class="header-text caps py-30">relevent coursework</div>
       <div class="standard-padding courses">
         <ul class="body-text-small">
           <li>Advanced Data Management</li>
@@ -143,7 +143,7 @@
           <li>Programming in Java</li>
           <li>Project Management</li>
           <li>Software Engineering</li>
-          <li>Web Development Foundations</li>
+          <li>Programming in Java</li>
         </ul>
       </div>
       <div class="header-text caps py-30">online certifications</div>
@@ -155,7 +155,7 @@
           <div class="mt-lg ml-lg standard-text pl-30 bold">Advanced CSS and Sass
             <div class="italic mt-md body-text-small no-bold">Udemy.com</div>
           </div>
-          <div class="mt-lg ml-lg standard-text pl-30 bold">Modern React with Redux
+          <div class="mt-lg ml-lg standard-text pl-30 bold">Mastering Typescript
             <div class="italic mt-md body-text-small no-bold">Udemy.com</div>
           </div>
         </div>
