--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="standard-padding">
         <div class="header-text caps">about me</div>
         <div class="standard-text mt-lg body-text">
-          I’m Gabe, a recent computer science graduate and frontend developer. I building full stack applications with appealing user interfaces. 
+          I’m Gabe, a recent computer science graduate and frontend developer. I enjoy building full stack applications with appealing user interfaces. 
         </div>
         <div class="header-text caps pt-md">latest project</div>
         <!-- <span class="icon"><i class="fas fa-globe"></i></span> -->
