--- a/index.html
+++ b/index.html
@@ -73,22 +73,17 @@
               <div class="inner" id="scss"></div>
              </div>
           </div>
-          <div class="progress-unit">python, django, flask
-            <div class="outer">
-              <div class="inner" id="js"></div>
-             </div>
-          </div>
           <div class="progress-unit">react, nextjs
             <div class="outer">
               <div class="inner" id="react"></div>
              </div>
           </div>
-          <div class="progress-unit">java, javafx
+          <div class="progress-unit">java, python
             <div class="outer">
               <div class="inner" id="java"></div>
              </div>
           </div>
-          <div class="progress-unit">sql, railway, prisma
+          <div class="progress-unit">sql, mongo db
             <div class="outer">
               <div class="inner" id="sql"></div>
              </div>
@@ -132,18 +127,22 @@
           <li>Artificial Intelligence</li>
           <li>Computer Architecture</li>
           <li>Database Management</li>
+          <li>Calculus</li>
           <li>Database Programming</li>
           <li>Data Management Applications</li>
           <li>Data Structures & Algorithms</li>
+          <li>Software Quality Assurance</li>
         </ul>
         <ul class="body-text-small">
           <li>Discrete Mathematics</li>
           <li>Network and Security Foundations</li>
           <li>Operating Systems for Programmers</li>
+          <li>Business of IT Management</li>
           <li>Programming in Java</li>
           <li>Project Management</li>
           <li>Software Engineering</li>
           <li>Programming in Java</li>
+          <li>Machine Learning Capstone</li>
         </ul>
       </div>
       <div class="header-text caps py-30">online certifications</div>
