--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="header-text caps pt-md">latest project</div>
         <!-- <span class="icon"><i class="fas fa-globe"></i></span> -->
-          <div class="body-text mt-lg standard-text">A simple social media application using Next Auth for authentication. Users can log in with their google account, share, and comment on each other's posts!</div>
+          <div class="body-text mt-lg standard-text">A social application built with PostgreSQL, Next Auth, React, and TypeScript. Users can log in with their google account, share, and comment on each other's posts.</div>
           <div class="text-md body-text site"><a href="https://poster-5wxj.vercel.app/">Poster</a>
           </div>
       </div>
