--- a/index.html
+++ b/index.html
@@ -58,34 +58,34 @@
 
 
         <div class="progress-container body-text light caps big-text">
-          <div class="progress-unit">html, jsx, tsx
+          <div class="progress-unit">web development
             <div class="outer">
               <div class="inner" id="html"></div>
              </div>
           </div>
-          <div class="progress-unit">css, scss, tailwind
+          <div class="progress-unit">sql
             <div class="outer">
-              <div class="inner" id="css"></div>
+              <div class="inner" id="sql"></div>
              </div>
           </div>
-          <div class="progress-unit">javascript, typescript
+          <div class="progress-unit">java
             <div class="outer">
-              <div class="inner" id="scss"></div>
+              <div class="inner" id="java"></div>
+             </div>
+          </div>
+          <div class="progress-unit">python
+            <div class="outer">
+              <div class="inner" id="python"></div>
+             </div>
+          </div>
+          <div class="progress-unit">javascript
+            <div class="outer">
+              <div class="inner" id="js"></div>
              </div>
           </div>
           <div class="progress-unit">react, nextjs
             <div class="outer">
               <div class="inner" id="react"></div>
-             </div>
-          </div>
-          <div class="progress-unit">java, python
-            <div class="outer">
-              <div class="inner" id="java"></div>
-             </div>
-          </div>
-          <div class="progress-unit">sql, mongo db
-            <div class="outer">
-              <div class="inner" id="sql"></div>
              </div>
           </div>
           <!-- <div class="progress-unit">bootstrap
